# frontier

./: .gitignore  CODE_REVIEW_frontier_2026-06-06.md  COMFYUI-curl-examples.md  Cargo.toml  README.md  card_prompts.json  comfyui-generate.ps1  gdd.md  generate_assets.ps1  index.html  publish.ps1  roadmap.md  tech_spec.md  ui_redesign_plan.md
assets/: card_prompts.json  cards.json  character_prompts.json  enemies.json  enemy_prompts.json  missions.json  regions.json
src/: game.rs  main.rs
src/combat/: card.rs  effects.rs  mod.rs  resolver.rs  unit.rs
src/data/: cards.rs  enemies.rs  mod.rs
src/kingdom/: adventurer.rs  buildings.rs  mod.rs  party.rs  progression.rs  roster.rs  stats.rs  unlock.rs
src/missions/: events.rs  mission.rs  mod.rs  region.rs
src/save/: mod.rs
src/state/: base.rs  combat.rs  event.rs  mission.rs  mission_select.rs  mod.rs  recruit.rs  results.rs
src/ui/: mod.rs
