[package]
name = "frontier_kingdom"
version = "0.1.0"
edition = "2021"
description = "A dark card-based expedition RPG inspired by Darkest Dungeon and Slay the Spire"
authors = ["Kalai"]

[dependencies]
macroquad = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
